# voice-notes

./: .gitignore  .impeccable.md  DESIGN.md  LICENSE  README.en.md  README.md  node_modules  package-lock.json  package.json  vitest.config.ts
.github/workflows/: windows-check.yml
.playwright-mcp/: page-2026-07-05T16-40-35-351Z.yml  page-2026-07-05T17-07-58-853Z.yml  page-2026-07-05T17-12-30-320Z.yml  page-2026-07-05T17-13-02-339Z.yml  page-2026-07-05T17-21-02-339Z.yml
.superpowers/sdd/: final-review-fixes.md  p2-sckit-spike.md  p35-final-review-fixes.md  p4-vpio-spike.md  p45-final-review-fixes.md  progress.md  task-1-report.md  task-3-report.md
docs/superpowers/plans/: 2026-06-30-voice-notes-p1-walking-skeleton.md  2026-07-01-voice-notes-p1.5-vad-segmentation.md  2026-07-01-voice-notes-p2-system-audio.md  2026-07-03-voice-notes-p3-storage-notes.md  2026-07-03-voice-notes-p3.5-ux-rework.md  2026-07-03-voice-notes-p4-diarization-aec.md  2026-07-03-voice-notes-p4.5-resume-echo-dedup.md  2026-07-04-voice-notes-lang-filter-rms.md  2026-07-04-voice-notes-p5-backlog-hardening.md  2026-07-04-voice-notes-p5-v1-polish.md  2026-07-05-voice-notes-audio-compression-settings.md  2026-07-05-voice-notes-intra-segment-diar.md  2026-07-05-voice-notes-raycast-design-system.md  2026-07-05-voice-notes-voiceprint-library.md  2026-07-06-voice-notes-asr-refine-pipeline.md  2026-07-06-voice-notes-settings-enhancement.md  2026-07-08-voice-notes-mcp-service.md  2026-07-09-voice-notes-cli-skill.md  2026-07-09-voice-notes-input-volume-banner.md  2026-07-09-voice-notes-playback-gain-normalization.md  2026-07-10-voice-notes-agent-access-expansion.md  2026-07-10-voice-notes-ai-tab.md  2026-07-12-voice-notes-telemetry.md  2026-07-13-voice-notes-lifecycle-p0-p1.md  2026-07-13-voice-notes-lifecycle-p2.md  2026-07-13-voice-notes-lifecycle-p3.md  2026-07-14-hooks-note-content.md  2026-07-14-hooks-tab.md  2026-07-14-voice-notes-neural-residual-aec.md  2026-07-14-voice-notes-playback-crossgate.md  2026-07-14-voice-notes-soft-aec-offline-clean.md  2026-07-14-voice-notes-soft-aec-realtime-align.md  2026-07-16-aing-p1-plan2-datamodel.md  2026-07-16-aing-p1-plan3-llm-entities.md  2026-07-16-aing-p1-plan4-sqlite-graph.md  2026-07-16-aing-p1-rename.md  2026-07-16-external-config-test-buttons.md  2026-07-16-model-download-urls-and-acceleration.md  2026-07-17-aing-p2a-note-entities.md  2026-07-17-aing-p2b-plan-a-graph-queries.md  (+7 more)
docs/superpowers/research/: 2026-07-19-recording-scheme-research.md
docs/superpowers/specs/: 2026-06-30-voice-notes-design.md  2026-07-01-voice-notes-p2-system-audio-design.md  2026-07-03-voice-notes-p3-storage-notes-design.md  2026-07-03-voice-notes-p3.5-ux-rework-design.md  2026-07-03-voice-notes-p4-diarization-aec-design.md  2026-07-03-voice-notes-p4.5-resume-echo-dedup-design.md  2026-07-04-voice-notes-lang-filter-rms-design.md  2026-07-04-voice-notes-p5-backlog-hardening-design.md  2026-07-04-voice-notes-p5-v1-polish-design.md  2026-07-05-voice-notes-audio-compression-settings-design.md  2026-07-05-voice-notes-audio-retention-playback-design.md  2026-07-05-voice-notes-intra-segment-diar-design.md  2026-07-05-voice-notes-raycast-design-system-design.md  2026-07-05-voice-notes-voiceprint-library-design.md  (+25 more)
scripts/: check_macos_entitlements.py  fetch_models.sh  fix-bundle-dylibs.mjs  gen_tray_icons.py  gen_tray_logo_frames.py  refine_golden.py  refresh_windows_icons.ps1
src/: app.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  fix-bundle-dylibs.sh  target  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: vpio_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: ailog.rs  hooks_external.rs  ipc.rs  lib.rs  logging.rs  main.rs  player.rs  player_gate.rs  session.rs  settings.rs  shortcuts.rs  telemetry.rs  tray.rs  update.rs
src-tauri/src/asr/: mod.rs  paraformer.rs  sense_voice.rs  whisper.rs
src-tauri/src/audio/: aec.rs  aec_align.rs  aec_stub.rs  delay_estimate.rs  echo_clean.rs  loopback.rs  microphone.rs  mock.rs  mod.rs  neural_aec.rs  resample.rs  resilient.rs  system.rs  vpio.rs
src-tauri/src/diar/: mod.rs  registry.rs  split.rs
src-tauri/src/graph/: canonical.rs  e2e_tests.rs  index.rs  large_fixture.rs  mod.rs  overrides.rs  path.rs  query.rs  resolve.rs
src-tauri/src/lifecycle/: actor.rs  consumers.rs  hooks.rs  machine.rs  mod.rs
src-tauri/src/mcp/: bridge.rs  bridge_stub.rs  cli_control.rs  cli_query.rs  mod.rs  registry.rs  server.rs  skill.rs  skill_template.md  tools.rs  uds.rs  uds_stub.rs
src-tauri/src/models/: download.rs  mod.rs
src-tauri/src/pipeline/: buffer.rs  frame_tap.rs  mod.rs  segment_worker.rs  segmenter.rs  silero.rs
src-tauri/src/refine/: agent.rs  backfill.rs  filter.rs  llm.rs  mod.rs  recluster.rs  relations.rs
src-tauri/src/store/: aing_graph.rs  audio.rs  disk.rs  export.rs  migrate.rs  mod.rs  notelock.rs  notes.rs  refined.rs  transcode.rs  voiceprints.rs  writer.rs
src-tauri/tests/: embedder_it.rs  eval_speaker_verification.rs  mcp_stdio.rs  recognizer_it.rs  sckit_probe.rs  segmenter_it.rs  sense_voice_it.rs
src-tauri/tests/fixtures/: aing_graph_invalid.json  aing_graph_valid.json
src/lib/: AudioPlayer.svelte  EntityGovernance.svelte  EntitySplitDialog.svelte  ForceGraph.svelte  GraphEdgeInspector.svelte  KnowledgeGraphToolbar.svelte  KnowledgePathPanel.svelte  ModelDownloadCard.svelte  PendingReviewPanel.svelte  RelationBackfillDialog.svelte  RelationDrawer.svelte  Sidebar.svelte  SpeakerChips.svelte  WelcomeOverlay.svelte  aiNavigationResponsiveness.test.ts  ailog.ts  events.ts  gain.test.ts  gain.ts  graph.test.ts  graph.ts  graphFilter.svelte.ts  hooks.svelte.ts  knowledge.ts  knowledgeGovernance.test.ts  knowledgeGovernance.ts  knowledgeView.test.ts  knowledgeView.ts  mcp.ts  models.ts  noteGraph.svelte.ts  noteGraph.test.ts  noteGraphLoader.ts  notes.test.ts  notes.ts  people.ts  recording.svelte.ts  recordingInteraction.test.ts  relationBackfill.test.ts  relationBackfill.ts  (+9 more)
src/routes/: +layout.svelte  +page.svelte
(+10 files in other folders)
