[package]
name = "voice-notes"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
crossbeam-channel = "0.5"
hound = "3.5"
sherpa-rs = "0.6"
chrono = "0.4"
ureq = "2"
sha2 = "0.10"
hex = "0.4"
bzip2 = "0.5"
tar = "0.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "8", features = ["macos_13_0"] }
# P4 VPIO spike: Apple 内建 AEC(VoiceProcessingIO)采集麦克风。crate 名 `coreaudio`。
coreaudio-rs = { version = "0.12", default-features = false, features = ["audio_unit", "core_audio"] }
