[package]
name = "voice-notes"
version = "0.3.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: 启用 TrayIconBuilder 等托盘 API;image-png: Image::from_bytes 解码 PNG 图标所需。
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
crossbeam-channel = "0.5"
# 原生回放:音轨 WAV mmap 进混音回调(随机访问零拷贝,seek=改游标)。
memmap2 = "0.9"
hound = "3.5"
sherpa-rs = "0.6"
chrono = "0.4"
ureq = "2"
sha2 = "0.10"
hex = "0.4"
bzip2 = "0.5"
tar = "0.4"
webrtc-audio-processing = { version = "2.1.0", features = ["bundled"] }
# logging.rs 的 stderr 重定向(dup2/isatty)。
libc = "0.2"
toml_edit = "0.25.12"
rmcp = { version = "~2.1", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-std", "time"] }
schemars = "1.2.1"
serde_yaml_ng = "0.10.0"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "8", features = ["macos_13_0"] }
# P4 VPIO spike: Apple 内建 AEC(VoiceProcessingIO)采集麦克风。crate 名 `coreaudio`。
coreaudio-rs = { version = "0.12", default-features = false, features = ["audio_unit", "core_audio"] }
