[package]
name = "voice-notes"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: 启用 TrayIconBuilder 等托盘 API;image-png: Image::from_bytes 解码 PNG 图标所需。
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-aptabase = "1"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
crossbeam-channel = "0.5"
# 原生回放:音轨 WAV mmap 进混音回调(随机访问零拷贝,seek=改游标)。
memmap2 = "0.9"
hound = "3.5"
sherpa-rs = "0.6"
chrono = "0.4"
# 实体规范名/别名/关系端点统一使用 Unicode full default case folding（如 ß == SS）。
unicode-casefold = "0.2"
ureq = "2"
sha2 = "0.10"
hex = "0.4"
bzip2 = "0.5"
tar = "0.4"
# webrtc-audio-processing 移至下方 [target.'cfg(not(windows))'.dependencies]:
# 上游官方不支持 MSVC,Windows 由 audio/aec_stub.rs 顶替同形 API。
# logging.rs 的 stderr 重定向(dup2/isatty)。
libc = "0.2"
toml_edit = "0.25.12"
rmcp = { version = "~2.1", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-std", "time"] }
schemars = "1.2.1"
serde_yaml_ng = "0.10.0"
# 神经残余级(DTLN-aec):tract-onnx 纯 Rust 推理 + 纯 Rust FFT。
# 路线定版 ONNX:tflite 双路线硬闸双败(tract-tflite 负轴 ReduceMean panic;tflitec 要
# bazel 整编 TF 源码,不可维护),模型已离线转 ONNX(数值最大差 ~1e-6)挂本仓 release,
# 详见 .superpowers/sdd/p3b-task-1-report.md 偏差记录。0.21 与 rustc 1.89 兼容(spike 实证)。
tract-onnx = "0.21"
realfft = "3"
# Aing 知识图谱:全局实体注册表 + 笔记↔实体边,从所有 aing.json 派生可整库重建。
# bundled 静态编译 libsqlite3,不依赖系统库(与本仓其余原生依赖 bundled 风格一致)。
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

# Windows 排除:上游官方不支持 MSVC(CI 无 windows、issue #34 维护者明言无测试机、
# build.rs 走 meson+GCC 旗标),Windows 侧由 audio/aec_stub.rs 顶替同形 API
# (构造返回 Err → 无 AEC 降级,文本级回声去重兜底)。
[target.'cfg(not(windows))'.dependencies]
webrtc-audio-processing = { version = "2.1.0", features = ["bundled"] }

# Windows 仅原子替换短小 current pointer；immutable SQLite version 文件从不被替换。
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "8", features = ["macos_13_0"] }
# P4 VPIO spike: Apple 内建 AEC(VoiceProcessingIO)采集麦克风。crate 名 `coreaudio`。
coreaudio-rs = { version = "0.12", default-features = false, features = ["audio_unit", "core_audio"] }
